--- a/bd-mobile-design.html
+++ b/bd-mobile-design.html
@@ -1,9 +1,33 @@
 <html>
   <head>
     <title>Tulenina, Super Giggle</title>
-    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <meta charset="utf-8">
+    <style>
+      img.bd-mobile-design {
+        display: block;
+        width: 100%;
+        height: auto;
+      }
+      #bd-mobile-design-footer {
+        padding: 22px;
+        background-color: #eee;
+        font-family: sans-serif;
+        text-align: center;
+        color: #444;
+      }
+      .italic {
+        font-style: italic;
+      }
+    </style>
   </head>
   <body>
-    <h1>British Design School: Mobile Design</h1>
+    <img src="img/p1.png" class="bd-mobile-design"/>
+    <img src="img/p2.png" class="bd-mobile-design"/>
+    <img src="img/p3.png" class="bd-mobile-design"/>
+    <img src="img/history.png" class="bd-mobile-design"/>
+    <div id="bd-mobile-design-footer">
+        Светлана Храмчихина, email zvuki<span class="italic">.</span>u at gmail.com
+    </div>
   </body>
 </html>
