--- a/bd-mobile-design.html
+++ b/bd-mobile-design.html
@@ -22,6 +22,7 @@
     </style>
   </head>
   <body>
+    <img src="img/nochalo.png" class="bd-mobile-design"/>
     <img src="img/p1.png" class="bd-mobile-design"/>
     <img src="img/p2.png" class="bd-mobile-design"/>
     <img src="img/p3.png" class="bd-mobile-design"/>
