update index ux ui

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h1>Tulenina portfolio</h1>
     <ul>
       <li><a href="/bd-mobile-design.html">British Design School: Mobile Design</a></li>
+      <li><a href="/bd-ux.html">British Design School: UX</a></li>
     </ul>
   </body>
 </html>
