--- a/bd-ux.html
+++ b/bd-ux.html
@@ -15,8 +15,9 @@
         font-family: sans-serif;
         text-align: center;
         color: #444;
+        font-size: 0.7em;
       }
-      #bd-ux-info.a {
+      #bd-ux-info a {
         font-size: 1.5em;
       }
       .italic {
