--- a/bd-ux.html
+++ b/bd-ux.html
@@ -10,15 +10,17 @@
         height: auto;
       }
       #bd-ux-info {
-        padding: 22px;
+        padding: 18px;
         background-color: #fff;
         font-family: sans-serif;
         text-align: center;
         color: #444;
         font-size: 0.7em;
+        line-height: 3em;
       }
       #bd-ux-info a {
-        font-size: 1.5em;
+        font-size: 2.5em;
+        color: #74b495;
       }
       .italic {
         font-style: italic;
