--- a/bd-ux.html
+++ b/bd-ux.html
@@ -10,17 +10,18 @@
         height: auto;
       }
       #bd-ux-info {
-        padding: 18px;
+        padding: 12px;
         background-color: #fff;
         font-family: sans-serif;
         text-align: center;
         color: #444;
-        font-size: 0.7em;
+        font-size: 0.6em;
         line-height: 3em;
+        color: #74b495;
       }
       #bd-ux-info a {
         font-size: 2.5em;
-        color: #74b495;
+        text-decoration: none;
       }
       .italic {
         font-style: italic;
