--- a/bd-ux.html
+++ b/bd-ux.html
@@ -31,7 +31,9 @@
   <body>
     <img src="img/salat.png" class="bd-ux"/>
     <div id="bd-ux-info">
-        <a href="https://invis.io/S6N9IMSV59A#/311759021_iPhone_8">Приложение</a><br/>
+        <a href="https://invis.io/S6N9IMSV59A#/311759021_iPhone_8">
+          <img src="img/salat-button.png"/>
+        </a><br/>
         Светлана Храмчихина, email zvuki<span class="italic">.</span>u at gmail.com
     </div>
     <img src="img/podval.png" class="bd-ux"/>
