--- a/bd-ux.html
+++ b/bd-ux.html
@@ -19,6 +19,9 @@
         line-height: 3em;
         color: #74b495;
       }
+      #bd-ux-info img {
+        width: 35%;
+      }
       #bd-ux-info a {
         font-size: 2.5em;
         text-decoration: none;
