--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <ul>
       <li><a href="/bd-mobile-design.html">British Design School: Mobile Design</a></li>
       <li><a href="/bd-ux.html">British Design School: UX</a></li>
+      <li><a href="/sber.html">Sberbank portfolio</a></li>
     </ul>
   </body>
 </html>
