--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,7 @@
     <a href="https://projects.invisionapp.com/share/QXL4BPZWPZD#/screens/300611670" target="_blank"><img src="img/sber3.png"/></a>
     <img src="img/sber4_1.png"/>
     <a href="https://projects.invisionapp.com/share/S6N9IMSV59A#/311759021_iPhone_8" target="_blank"><img src="img/sber5.png"/></a>
-    <img src="img/sber6.png"/>
-    <a href="https://xd.adobe.com/view/4a93f6c1-8239-4219-8a5b-09e18ae05da2/" target="_blank"><img src="img/sber7.png"/></a>
-    <img src="img/sber8.png"/>
+    <img src="img/yandex1.png"/>
+    <img src="img/yandex2.png"/>
   </body>
 </html>
