--- a/portfolio.html
+++ b/portfolio.html
@@ -21,6 +21,6 @@
     <img src="img/sber4_1.png"/>
     <a href="https://projects.invisionapp.com/share/S6N9IMSV59A#/311759021_iPhone_8" target="_blank"><img src="img/sber5.png"/></a>
     <img src="img/yandex1.png"/>
-    <img src="img/yandex2.png"/>
+    <img src="img/yandex2-1.png"/>
   </body>
 </html>
