--- a/for-ya.html
+++ b/for-ya.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Tulenina, Super Giggle</title>
+    <title>Hi, Mir!</title>
     <link rel="stylesheet" href="css/reset.css">
     <meta charset="utf-8">
     <style>
