--- a/for-ya.html
+++ b/for-ya.html
@@ -16,6 +16,6 @@
   </head>
   <body>
     <img src="img/ya1.png"/>
-    <img src="img/ya2.png»/><img src="img/ya3.png"/><img src="img/ya4.png"/><img src="img/ya5.png"/>
+    <img src="img/ya2.png"/><img src="img/ya3.png"/><img src="img/ya4.png"/><img src="img/ya5.png"/>
   </body>
 </html>
