--- a/for-ya.html
+++ b/for-ya.html
@@ -1,5 +1,4 @@
-<html>
-  <head>
+<html><head>
     <title>Hi, Mir!</title>
     <link rel="stylesheet" href="css/reset.css">
     <meta charset="utf-8">
@@ -12,10 +11,17 @@
       a {
         text-decoration: none;
       }
+      .quater {
+        display: block;
+        width: 25%;
+        float: left;
+      }
     </style>
   </head>
   <body>
-    <img src="img/ya1.png"/>
-    <img src="img/ya2.png"/><img src="img/ya3.png"/><img src="img/ya4.png"/><img src="img/ya5.png"/>
-  </body>
-</html>
+    <img src="img/ya1.png">
+    <img class="quater" src="img/ya2.png">
+    <img class="quater" src="img/ya3.png">
+    <img class="quater" src="img/ya4.png">
+    <img class="quater" src="img/ya5.png">
+</body></html>
