add link tulenina.github.io/port1.html

--- a/for-ya.html
+++ b/for-ya.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <img src="img/ya1.png">
-    <img class="quater" src="img/ya2.png">
+    <a href="tulenina.github.io/port1.html"><img class="quater" src="img/ya2.png"></a>
     <img class="quater" src="img/ya3.png">
     <img class="quater" src="img/ya4.png">
     <img class="quater" src="img/ya5.png">
