--- a/for-ya.html
+++ b/for-ya.html
@@ -21,7 +21,7 @@
   <body>
     <img src="img/ya1.png">
     <a href="tulenina.github.io/port1.html"><img class="quater" src="img/ya2.png"></a>
-    <img class="quater" src="img/ya3.png">
-    <img class="quater" src="img/ya4.png">
-    <img class="quater" src="img/ya5.png">
+    <a href="tulenina.github.io/port2.html"><img class="quater" src="img/ya3.png"></a>
+    <a href="tulenina.github.io/port3.html"><img class="quater" src="img/ya4.png"></a>
+    <a href="tulenina.github.io/port4.html"><img class="quater" src="img/ya5.png"></a>
 </body></html>
