--- a/port2.html
+++ b/port2.html
@@ -16,7 +16,6 @@
     </style>
   </head>
   <body>
-    <img src="img/sber4_1.png"/>
-    <a href="https://projects.invisionapp.com/share/S6N9IMSV59A#/311759021_iPhone_8" target="_blank"><img src="img/sber5.png"/></a>
+    <img src="img/yandex1.png"/>
   </body>
 </html>
