--- a/port4.html
+++ b/port4.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Portfolio – Skalka</title>
+    <title>Portfolio – Soc</title>
     <link rel="stylesheet" href="css/reset.css">
     <meta charset="utf-8">
     <style>
