--- a/port2.html
+++ b/port2.html
@@ -1,7 +1,7 @@
 
 <html>
   <head>
-    <title>Portfolio – Skalka</title>
+    <title>Portfolio – China</title>
     <link rel="stylesheet" href="css/reset.css">
     <meta charset="utf-8">
     <style>
