--- a/for-ya.html
+++ b/for-ya.html
@@ -1,5 +1,5 @@
 <html><head>
-    <title>Hi, Mir!</title>
+    <title>Hello, Mir!</title>
     <link rel="stylesheet" href="css/reset.css">
     <meta charset="utf-8">
     <style>
