--- a/port3.html
+++ b/port3.html
@@ -15,7 +15,7 @@
     </style>
   </head>
   <body>
-   <img src="img/sber4_1.png"/>
+   <img src="img/salat3.png"/>
     <a href="https://projects.invisionapp.com/share/S6N9IMSV59A#/311759021_iPhone_8" target="_blank"><img src="img/sber5.png"/></a>
    <img src="img/salat2-1.png"/> 
   </body> 
