--- a/for-ya.html
+++ b/for-ya.html
@@ -19,7 +19,7 @@
     </style>
   </head>
   <body>
-    <img src="img/ya1.png">
+    <img src="img/yandex1-01.png">
     <a href="tulenina.github.io/port1.html"><img class="quater" src="img/ya2.png"></a>
     <a href="tulenina.github.io/port2.html"><img class="quater" src="img/ya3.png"></a>
     <a href="tulenina.github.io/port3.html"><img class="quater" src="img/ya4.png"></a>
