--- a/for-ya.html
+++ b/for-ya.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <img src="img/yandex1-01.png">
-    <a href="tulenina.github.io/port1.html"><img class="quater" src="img/ya2.png"></a>
+    <a href="/port1.html"><img class="quater" src="img/ya2.png"></a>
     <a href="tulenina.github.io/port2.html"><img class="quater" src="img/ya3.png"></a>
     <a href="tulenina.github.io/port3.html"><img class="quater" src="img/ya4.png"></a>
     <a href="tulenina.github.io/port4.html"><img class="quater" src="img/ya5.png"></a>
