--- a/port2.html
+++ b/port2.html
@@ -17,5 +17,6 @@
   </head>
   <body>
     <img src="img/yandex5-1.png"/>
+    Светлана Храмчихина, email zvuki<span class="italic">.</span>u at gmail.com
   </body>
 </html>
