--- a/port2.html
+++ b/port2.html
@@ -5,13 +5,30 @@
     <link rel="stylesheet" href="css/reset.css">
     <meta charset="utf-8">
     <style>
-      img {
+           img.yandex {
         display: block;
         width: 100%;
         height: auto;
       }
-      a {
+      #bd-yandex-info {
+        padding: 12px;
+        background-color: #fff;
+        font-family: sans-serif;
+        text-align: center;
+        color: #255;
+        font-size: 0.6em;
+        line-height: 3em;
+        color: #74b495;
+      }
+      #bd-yandex-info img {
+        width: 35%;
+      }
+      #bd-yandex-info a {
+        font-size: 2.5em;
         text-decoration: none;
+      }
+      .italic {
+        font-style: italic;
       }
     </style>
   </head>
