--- a/port2.html
+++ b/port2.html
@@ -1,34 +1,16 @@
-
 <html>
   <head>
     <title>Portfolio – China</title>
     <link rel="stylesheet" href="css/reset.css">
     <meta charset="utf-8">
     <style>
-           img.yandex {
+      img {
         display: block;
         width: 100%;
         height: auto;
       }
-      #bd-yandex-info {
-        padding: 12px;
-        background-color: #fff;
-        font-family: sans-serif;
-        text-align: center;
-        color: #255;
-        font-size: 0.6em;
-        line-height: 3em;
-        color: #74b495;
-      }
-      #bd-yandex-info img {
-        width: 35%;
-      }
-      #bd-yandex-info a {
-        font-size: 2.5em;
+      a {
         text-decoration: none;
-      }
-      .italic {
-        font-style: italic;
       }
     </style>
   </head>
