--- a/port2.html
+++ b/port2.html
@@ -12,10 +12,24 @@
       a {
         text-decoration: none;
       }
+      
+      #email-footer {
+    padding: 22px;
+    background-color: #eee;
+    font-family: sans-serif;
+    text-align: center;
+    color: #444;
+}
+.italic {
+    font-style: italic;
+}
+      
     </style>
   </head>
   <body>
     <img src="img/yandex5-1.png"/>
-    <center>Светлана Храмчихина, email zvuki<span class="italic">.</span>u at gmail.com</center>
+<div id="email-footer">
+    Светлана Храмчихина, email zvuki<span class="italic">.</span>u at gmail.com
+</div>
   </body>
 </html>
