--- a/port2.html
+++ b/port2.html
@@ -15,7 +15,7 @@
       
       #email-footer {
     padding: 22px;
-    background-color: #eee;
+    background-color: #fff;
     font-family: sans-serif;
     text-align: center;
     color: #444;
