--- a/for-ya.html
+++ b/for-ya.html
@@ -16,6 +16,16 @@
         width: 25%;
         float: left;
       }
+         #email-footer {
+    padding: 22px;
+    background-color: #fff;
+    font-family: sans-serif;
+    text-align: center;
+    color: #444;
+}
+.italic {
+    font-style: italic;
+}
     </style>
   </head>
   <body>
@@ -24,4 +34,8 @@
     <a href="/port2.html"><img class="quater" src="img/ya3.png"></a>
     <a href="/port3.html"><img class="quater" src="img/ya4.png"></a>
     <a href="/port4.html"><img class="quater" src="img/ya5.png"></a>
+      <div id="email-footer">
+    Светлана Храмчихина, email zvuki<span class="italic">.</span>u at gmail.com
+</div>
+
 </body></html>
