--- a/port1.html
+++ b/port1.html
@@ -12,11 +12,24 @@
       a {
         text-decoration: none;
       }
+       #email-footer {
+    padding: 22px;
+    background-color: #fff;
+    font-family: sans-serif;
+    text-align: center;
+    color: #444;
+}
+.italic {
+    font-style: italic;
+}
     </style>
   </head>
   <body>
     <img src="img/sber2.png"/>
     <a href="https://projects.invisionapp.com/share/QXL4BPZWPZD#/screens/300611670" target="_blank"><img src="img/sber3.png"/></a>
     <img src="img/yandex4-1.png"/>
+    <div id="email-footer">
+    Светлана Храмчихина, email zvuki<span class="italic">.</span>u at gmail.com
+</div>
   </body>
 </html>
