--- a/port4.html
+++ b/port4.html
@@ -12,9 +12,23 @@
       a {
         text-decoration: none;
       }
+       #email-footer {
+    padding: 22px;
+    background-color: #fff;
+    font-family: sans-serif;
+    text-align: center;
+    color: #444;
+}
+.italic {
+    font-style: italic;
+}
     </style>
   </head>
   <body>
     <img src="img/yandex3-1.png"/>
+<div id="email-footer">
+    Светлана Храмчихина, email zvuki<span class="italic">.</span>u at gmail.com
+</div>
+
   </body>
 </html>
