--- a/port3.html
+++ b/port3.html
@@ -12,11 +12,25 @@
       a {
         text-decoration: none;
       }
+       #email-footer {
+    padding: 22px;
+    background-color: #fff;
+    font-family: sans-serif;
+    text-align: center;
+    color: #444;
+}
+.italic {
+    font-style: italic;
+}
     </style>
   </head>
   <body>
    <img src="img/salat3.png"/>
     <a href="https://projects.invisionapp.com/share/S6N9IMSV59A#/311759021_iPhone_8" target="_blank"><img src="img/sber5.png"/></a>
    <img src="img/salat2-1.png"/> 
+<div id="email-footer">
+    Светлана Храмчихина, email zvuki<span class="italic">.</span>u at gmail.com
+</div>
+
   </body> 
 </html>
