--- a/for-ya.html
+++ b/for-ya.html
@@ -17,6 +17,7 @@
         float: left;
       }
          #email-footer {
+    clear: both;
     padding: 22px;
     background-color: #fff;
     font-family: sans-serif;
