--- a/hello.html
+++ b/hello.html
@@ -30,7 +30,7 @@
     </style>
   </head>
   <body>
-    <img src="img/hi1">
+    <img src="img/hi1.png">
     <a href="/port1.html"><img class="quater" src="img/ya2.png"></a>
     <a href="/port2.html"><img class="quater" src="img/ya3.png"></a>
     <a href="/port3.html"><img class="quater" src="img/ya4.png"></a>
