link in index to designer.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <li><a href="/portfolio.html">Portfolio</a></li>
       <li><a href="/bd-mobile-design.html">British Design School: Mobile Design</a></li>
       <li><a href="/bd-ux.html">British Design School: UX</a></li>
-   
+      <li><a href="/designer.html">Designer portfolio</a></li>
     </ul>
   </body>
 </html>
