--- a/designer.html
+++ b/designer.html
@@ -23,7 +23,7 @@
     <div class="floated-container quarter centered-block">
       <div class="floated-element">
         <a href="designer_inner1.html">
-          <img src="img/designer/ya2.png"/>
+          <img src="img/designer/icon_1-07.png"/>
           <div class="floated-element-text">Приложение для скалолазов, которые хотят повысить эффективность своих тренировок</div>
         </a>
       </div>
