--- a/designer.html
+++ b/designer.html
@@ -35,7 +35,7 @@
       </div>
       <div class="floated-element">
         <a href="#">
-          <img src="img/designer/ya2.png"/>
+          <img src="img/designer/icon-1-7-07.png"/>
         </a>
         <div class="floated-element-text">Этот тест можно не делать ссылкой</div>
       </div>
