--- a/designer.html
+++ b/designer.html
@@ -70,7 +70,7 @@
     </div>
 
     <div id="footer">
-        Светлана Храмчихина, <a href="mailto:zvuki.u@gmail.com">zvuki.u@gmail.com</a>
+        Светлана Храмчихина, <a href="mailto:zvuki.u at gmail.com">zvuki.u@gmail.com</a>
     </div>
   </body>
 </html>
