--- a/designer_inner1.html
+++ b/designer_inner1.html
@@ -42,7 +42,7 @@
     </div>
 
     <div id="footer">
-        Светлана Храмчихина, <a href="mailto:zvuki.u@gmail.com">zvuki.u@gmail.com</a>
+        Светлана Храмчихина, <a href="mailto:zvuki.u at gmail.com">zvuki.u atgmail.com</a>
     </div>
   </body>
 </html>
