--- a/designer_inner1.html
+++ b/designer_inner1.html
@@ -5,12 +5,18 @@
     <link rel="stylesheet" href="css/designer.css">
     <meta charset="utf-8">
   </head>
-  <body>
-    <div class="header">
+     <div class="floated-element">
       <a href="designer.html">
-        <img src="img/designer/header-dummy.png" class="header"/>
+      <img src="img/designer/name.png"/>
       </a>
     </div>
+  <body>
+
+     <p>&nbsp;</p>
+     <p>&nbsp;</p>
+     <p>&nbsp;</p>
+     <p>&nbsp;</p>
+  
     
     <h1 class="centered-block">Мобильные приложения «Авито&nbsp;—&nbsp;добрые&nbsp;дела» и «Сбербанк&nbsp;онлайн»</h1>
 
@@ -20,8 +26,9 @@
     
 
     <div class="centered-block">
-      <img src="img/designer/ya2.png"/><br/>
-      <img style="width:50%;" src="img/designer/ya2.png"/>
+      <img src="img/designer/birds-01.png"/><br/>
+      <img src="img/designer/birds-02.png"/><br/>
+      <img src="img/designer/birds-03.png"/><br/>
     </div>
     <div class="centered-block">
       <a href="#">Ссылка на мобильное приложение текстом</a>
@@ -33,13 +40,12 @@
       </a>
     </div>
 
-    <div class="centered-block centered-text">
-      Воплощение моей идеи о том, как можно сделать приложения<br/>более социально ответственными и так далее<br/>и ещё немного текста.<br/><span class="f-bold">Жирно</span> и <span class="f-light">тонко</span>, продолжение описания.
-    </div>
 
-    <div class="centered-block">
-      <img src="img/designer/ya2.png"/>
-    </div>
+
+
+
+   
+
 
     <div id="footer">
         Светлана Храмчихина, <a href="mailto:zvuki.u@gmail.com">zvuki.u@gmail.com</a>
