--- a/china.html
+++ b/china.html
@@ -20,7 +20,7 @@
     
     <div class="centered-block centered-text">Приложение для удобного и быстрого заказа вкуснейших китайских блюд с доставкой на дом.</div>
     <div class="centered-block centered-text f-bold">Что сделано:</div>
-    <div class="centered-block centered-text">Идея / Исследование / Интерфейс / Дизайн мобильного приложения.</div>
+    <div class="centered-block centered-text">Идея / Дизайн мобильного приложения</div>
 
     <div class="full-width-block">
       <img style="width:100%;" src="img/designer/china-01.png"/>
