--- a/avi.html
+++ b/avi.html
@@ -26,7 +26,7 @@
 
     <div class="centered-block centered-text f-bold">Что сделано:</div>
 
-    <div class="centered-block centered-text">Идея / Дизайн мобильного приложения.</div>
+    <div class="centered-block centered-text">Идея / Дизайн мобильного приложения</div>
     
 
     <div class="full-width-block">
