ссылка на макет

--- a/salat.html
+++ b/salat.html
@@ -21,7 +21,11 @@
 
     <div class="centered-block centered-text f-bold">Что сделано:</div>
 
-    <div class="centered-block centered-text">Идея / Исследование / Интерфейс / Дизайн мобильного приложения.</div>
+    <div class="centered-block centered-text">Идея / Исследование / Интерфейс / Дизайн мобильного приложения</div>
+
+    <div class="centered-block">
+      <a href="https://projects.invisionapp.com/share/S6N9IMSV59A#/311759021_iPhone_8" target="_blank"><img style="width:35%;" src="img/designer/button-02.jpg"/></a><br/>
+    </div>
 
     <div class="full-width-block">
       <img style="width:100%;" src="img/designer/salat-01.png"/>
