ссылка на макет

--- a/skalka.html
+++ b/skalka.html
@@ -19,10 +19,14 @@
     
     <div class="centered-block centered-text">Уникальное приложение, позволяющее скалолазам эффективнее тренироваться, изучая новые трассы.</div>
     <div class="centered-block centered-text"><span class="f-bold">Что сделано:</span></div>
-    <div class="centered-block centered-text">Идея / Дизайн мобильного приложения.</div>
+    <div class="centered-block centered-text">Идея / Исследование / Интерфейс / Дизайн мобильного приложения</div>
+
+    <div class="centered-block">
+      <a href="https://projects.invisionapp.com/share/QXL4BPZWPZD#/screens/300611670" target="_blank"> <img style="width:35%;" src="img/designer/button-01.png"/> </a><br/>
+    </div>
 
     <div class="full-width-block">
-      <img style="width:100%;" src="img/designer/skalka-01.png"/><br/>
+      <img style="width:100%;" src="img/designer/skalka-05.png"/><br/>
       <img style="width:100%;" src="img/designer/skalka-04.png"/>
     </div>
 
