--- a/salat.html
+++ b/salat.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="full-width-block">
-      <img style="width:100%;" src="img/designer/salat-01.png"/>
+      <img style="width:100%;" src="img/designer/salat-01.jpg"/>
     </div>
 
     <div id="footer">
