--- a/birds.html
+++ b/birds.html
@@ -24,9 +24,9 @@
     </div>
 
     <div class="centered-block">
-      <img src="img/designer/birds-01.svg"/><br/>
-      <img src="img/designer/birds-02.svg"/><br/>
-      <img src="img/designer/birds-03.svg"/><br/>
+      <img src="img/designer/birds-01.png"/><br/>
+      <img src="img/designer/birds-02.png"/><br/>
+      <img src="img/designer/birds-03.png"/><br/>
     </div>
 
     <div id="footer">
