--- a/icons.html
+++ b/icons.html
@@ -29,7 +29,7 @@
     }
     </style>
 
-    <div class="centered-block icons"><img src="img/designer/icons-01.png"/></div>
+    <div class="centered-block icons"><img src="img/designer/icons-01-03.svg"/></div>
     <div class="centered-block icons"><img src="img/designer/icons-4-svg-04.svg"/></div>
     
 
