--- a/icons.html
+++ b/icons.html
@@ -19,7 +19,7 @@
       <img style="width:2%;"  src="img/designer/heart.png"/>
     </div>
 
-    <div class="centered-block centered-text">
+    <div class="centered-block centered-text margin-top-35">
       Для тех, кто не представляет свое лето без рюкзака за спиной (а в рюкзаке горелка, спальник и добрая книга).
     </div>
     
@@ -29,7 +29,7 @@
     }
     </style>
 
-    <div class="centered-block margin-top-35 icons"><img src="img/designer/icons-01-03.svg"/></div>
+    <div class="centered-block icons"><img src="img/designer/icons-01-03.svg"/></div>
     <div class="centered-block icons"><img src="img/designer/icons-4-svg-04.svg"/></div>
     
 
