--- a/blacksea.html
+++ b/blacksea.html
@@ -6,7 +6,9 @@
     <meta charset="utf-8">
   </head>
   <body>
-
+    <div class="rel-nav rel-nav-left"><a href="#"><img src="img/designer/heart.png"></a></div>
+    <div class="rel-nav rel-nav-right"><a href="#"><img src="img/designer/heart.png"></a></div>
+    
     <div class="header">
       <a href="designer.html">
         <img src="img/designer/name.png" class="header"/>
