--- a/designer_columns.html
+++ b/designer_columns.html
@@ -25,7 +25,7 @@
                 <div class="col-item">
                     <div class="col-item-hover">
                         <a href="#">
-                            <img class="col-item-image" src="img/designer_columns/logo-04.svg" />
+                            <img class="col-item-image" src="img/designer_columns/logos-17.svg" />
                             <div class="col-item-descr-group">
                                 <div class="col-item-overlay"></div>
                                 <div class="col-item-descr">
@@ -45,7 +45,7 @@
                 <div class="col-item">
                     <div class="col-item-hover">
                         <a href="#">
-                            <img class="col-item-image" src="img/designer_columns/logo-08.svg" />
+                            <img class="col-item-image" src="img/designer_columns/logos-banner-26.png" />
                             <div class="col-item-descr-group">
                                 <div class="col-item-overlay"></div>
                                 <div class="col-item-descr">
