--- a/designer_columns.html
+++ b/designer_columns.html
@@ -50,8 +50,8 @@
                                 <div class="col-item-overlay"></div>
                                 <div class="col-item-descr">
                                     <div class="col-item-text">
-                                        <h1>ыталыадлыва к куаку</h1>
-                                        <div>Lorem ipsum dolores amet ...</div>
+                                        <h1>Красочный забег</h1>
+                                        <div>Баннеры для социальных сетей</div>
                                     </div>
                                 </div>
                             </div>
@@ -66,8 +66,8 @@
                                 <div class="col-item-overlay"></div>
                                 <div class="col-item-descr">
                                     <div class="col-item-text">
-                                        <h1>LKlsfke  wepoefpoew fpew</h1>
-                                        <div>LKW Fewfe o ewo poK  oiewf oiewokwje</div>
+                                        <h1>Баннеры для социальных сетей</h1>
+                                        <div>Ну всякие епта </div>
                                     </div>
                                 </div>
                             </div>
