--- a/designer_columns.html
+++ b/designer_columns.html
@@ -39,6 +39,19 @@
             </td>
             <td>
                 <!-- second column -->
+                  <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="#">
+                            <img class="col-item-image" src="img/designer_columns/logos-19.svg" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>Красочный забег</h1>
+                                    <div>Баннеры для социальных сетей</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
                 <div class="col-item">
                     <div class="col-item-hover">
                         <a href="#">
