--- a/designer_columns.html
+++ b/designer_columns.html
@@ -40,14 +40,14 @@
             <td>
                 <!-- second column -->
                  
-                <div class="col-item">
+                  <div class="col-item">
                     <div class="col-item-hover">
                         <a href="#">
-                            <img class="col-item-image" src="img/designer_columns/logos-17.svg" />
+                            <img class="col-item-image" src="img/designer_columns/logos-23.svg" />
                             <div class="col-item-descr">
                                 <div class="col-item-text">
-                                    <h1>Красочный забег</h1>
-                                    <div>Баннеры для социальных сетей</div>
+                                    <h1>Баннеры для социальных сетей</h1>
+                                    <div>Ну всякие епта </div>
                                 </div>
                             </div>
                         </a>
