--- a/designer_columns.html
+++ b/designer_columns.html
@@ -35,6 +35,32 @@
                         </a>
                     </div>
                 </div>
+                   <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="#">
+                            <img class="col-item-image" src="img/designer_columns/logos-16.svg" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>Какое-то название</h1>
+                                    <div>Описание</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                   <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="#">
+                            <img class="col-item-image" src="img/designer_columns/logos-16.svg" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>Какое-то название</h1>
+                                    <div>Описание</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
                 <!-- col-1 end -->
             </td>
             <td>
@@ -84,6 +110,32 @@
             <td>
                 <!-- third column -->
                 <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="#">
+                            <img class="col-item-image" src="img/designer_columns/logos-banner-26.png" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>09</h1>
+                                    <div>sdf fr ew fewewew ecewc ew ewew cewmewk ewlkew kj kewllkew jfewf lkewljwe</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                                <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="#">
+                            <img class="col-item-image" src="img/designer_columns/logos-banner-26.png" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>09</h1>
+                                    <div>sdf fr ew fewewew ecewc ew ewew cewmewk ewlkew kj kewllkew jfewf lkewljwe</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                                <div class="col-item">
                     <div class="col-item-hover">
                         <a href="#">
                             <img class="col-item-image" src="img/designer_columns/logos-banner-26.png" />
