--- a/designer_columns.html
+++ b/designer_columns.html
@@ -137,7 +137,7 @@
                 <div class="col-item">
                     <div class="col-item-hover">
                         <a href="#">
-                            <img class="col-item-image" src="img/designer_columns/logos-banner-26.png" />
+                            <img class="col-item-image" src="img/designer_columns/logos-15.jpg" />
                             <div class="col-item-descr">
                                 <div class="col-item-text">
                                     <h1>09</h1>
