--- a/designer_columns.html
+++ b/designer_columns.html
@@ -51,7 +51,7 @@
                    <div class="col-item">
                     <div class="col-item-hover">
                         <a href="#">
-                            <img class="col-item-image" src="img/designer_columns/logos-16.svg" />
+                            <img class="col-item-image" src="img/designer_columns/logos-20.svg" />
                             <div class="col-item-descr">
                                 <div class="col-item-text">
                                     <h1>Какое-то название</h1>
@@ -104,6 +104,19 @@
                         </a>
                     </div>
                 </div>
+                <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="#">
+                            <img class="col-item-image" src="img/designer_columns/logos-22.svg" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>Баннеры для социальных сетей</h1>
+                                    <div>Ну всякие епта </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
                 <!-- col-2 end -->
             </td>
             <td>
@@ -137,7 +150,7 @@
                 <div class="col-item">
                     <div class="col-item-hover">
                         <a href="#">
-                            <img class="col-item-image" src="img/designer_columns/logos-15.jpg" />
+                            <img class="col-item-image" src="img/designer_columns/logos-25.svg" />
                             <div class="col-item-descr">
                                 <div class="col-item-text">
                                     <h1>09</h1>
