--- a/designer_columns.html
+++ b/designer_columns.html
@@ -61,9 +61,23 @@
                         </a>
                     </div>
                 </div>
+                   <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="#">
+                            <img class="col-item-image" src="img/designer_columns/logos-22.svg" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>Баннеры для социальных сетей</h1>
+                                    <div>Ну всякие епта </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
                 <!-- col-1 end -->
             </td>
             <td>
+                
                 <!-- second column -->
             <div class="col-item">
                     <div class="col-item-hover">
@@ -107,7 +121,7 @@
                 <div class="col-item">
                     <div class="col-item-hover">
                         <a href="#">
-                            <img class="col-item-image" src="img/designer_columns/logos-22.svg" />
+                            <img class="col-item-image" src="img/designer_columns/logos-01.jpg" />
                             <div class="col-item-descr">
                                 <div class="col-item-text">
                                     <h1>Баннеры для социальных сетей</h1>
