--- a/designer_columns.html
+++ b/designer_columns.html
@@ -61,7 +61,20 @@
                         </a>
                     </div>
                 </div>
-                   <div class="col-item">
+                <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="#">
+                            <img class="col-item-image" src="img/designer_columns/logos-02.svg" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>09</h1>
+                                    <div>sdf fr ew fewewew ecewc ew ewew cewmewk ewlkew kj kewllkew jfewf lkewljwe</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-item">
                     <div class="col-item-hover">
                         <a href="#">
                             <img class="col-item-image" src="img/designer_columns/logos-22.svg" />
@@ -152,6 +165,19 @@
                     <div class="col-item-hover">
                         <a href="#">
                             <img class="col-item-image" src="img/designer_columns/logos-15.jpg" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>09</h1>
+                                    <div>sdf fr ew fewewew ecewc ew ewew cewmewk ewlkew kj kewllkew jfewf lkewljwe</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="#">
+                            <img class="col-item-image" src="img/designer_columns/logos-02.svg" />
                             <div class="col-item-descr">
                                 <div class="col-item-text">
                                     <h1>09</h1>
