--- a/designer_columns.html
+++ b/designer_columns.html
@@ -28,8 +28,8 @@
                             <img class="col-item-image" src="img/designer_columns/logos-16.svg" />
                             <div class="col-item-descr">
                                 <div class="col-item-text">
-                                    <h1>Какое-то название</h1>
-                                    <div>Описание</div>
+                                    <h1>Баннер для хостела в Симферополе</h1>
+                                    <div> ПУК</div>
                                 </div>
                             </div>
                         </a>
