--- a/designer_columns.html
+++ b/designer_columns.html
@@ -85,7 +85,7 @@
                             <img class="col-item-image" src="img/designer_columns/logos-21.svg" />
                             <div class="col-item-descr">
                                 <div class="col-item-text">
-                                    <h1>Баннеры для социальных сетей</h1>
+                                    <h1>Баннер для хостела «Няш»</h1>
                                     <div>Ну всякие епта </div>
                                 </div>
                             </div>
@@ -98,8 +98,8 @@
                             <img class="col-item-image" src="img/designer_columns/logos-19.svg" />
                             <div class="col-item-descr">
                                 <div class="col-item-text">
-                                    <h1>Красочный забег</h1>
-                                    <div>Баннеры для социальных сетей</div>
+                                    <h1>Баннеры для школы интернет-маркетинга</h1>
+                                    <div>А?</div>
                                 </div>
                             </div>
                         </a>
