--- a/blacksea.html
+++ b/blacksea.html
@@ -1,27 +1,32 @@
 <html>
   <head>
-    <title>Tulenina, Super Giggle</title>
+    <title>Кафе на побережье / Айдентика</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/designer.css">
     <meta charset="utf-8">
   </head>
   <body>
-    <div class="rel-nav rel-nav-left"><a href="#"><img src="img/designer/heart.png"></a></div>
-    <div class="rel-nav rel-nav-right"><a href="#"><img src="img/designer/heart.png"></a></div>
+
+    <div class="rel-nav rel-nav-left"><a href="sport.html"><img src="img/designer/left.svg"></a></div>
+    <div class="rel-nav rel-nav-right"><a href="shop.html"><img src="img/designer/right.svg"></a></div>
     
     <div class="header">
-      <a href="designer.html">
+      <a href="index.html?designer">
         <img src="img/designer/name.png" class="header"/>
       </a>
     </div>
 
-    <h1 class="centered-block margin-top-35">Бреднинг для кафе, расположенного на побережье Черного моря</h1>
+    <h1 class="centered-block margin-top-35">Синее, синее море</h1>
 
         <div class="centered-block heart">
       <img style="width:2%;"  src="img/designer/heart.png"/>
     </div>  
 
     <div class="centered-block centered-text">
+      Бреднинг для кафе, расположенного на побережье Черного моря.
+    </div>
+
+    <div class="centered-block centered-text"> 
       Здесь готовят флэт уайт из смеси зерен арабики, привезенных из Эфиопии, Индонезии и Мексики. А молоко предлагают даже фундучное.
     </div>
 
