--- a/china.html
+++ b/china.html
@@ -8,7 +8,7 @@
   <body>
 
     <div class="header">
-      <a href="designer.html">
+      <a href="index.html?designer">
         <img src="img/designer/name.png" class="header"/>
       </a>
     </div>
