--- a/designer_inner1.html
+++ b/designer_inner1.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
   </head>
      <div class="floated-element">
-      <a href="designer.html">
+      <a href="index.html?designer">
       <img src="img/designer/name.png"/>
       </a>
     </div>
