--- a/index.html
+++ b/index.html
@@ -1,15 +1,209 @@
 <html>
-  <head>
-    <title>Tulenina, Super Giggle</title>
-    <link rel="stylesheet" href="/css/reset.css">
-  </head>
-  <body>
-    <h1>Tulenina portfolio</h1>
-    <ul>
-      <!--li><a href="/portfolio.html">Portfolio</a></li>
-      <li><a href="/bd-mobile-design.html">British Design School: Mobile Design</a></li>
-      <li><a href="/bd-ux.html">British Design School: UX</a></li-->
-      <li><a href="/designer.html">Designer portfolio</a></li>
-    </ul>
-  </body>
+    <head>
+        <title>Tulenina, Super Giggle</title>
+        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/designer_columns.css">
+        <meta charset="utf-8">
+    </head>
+    <body>
+        <div class="header">
+            <img src="img/designer/name.png" class="header"/>
+        </div>
+        <table class="main-cols">
+            <tr>
+            <td>
+                <!-- first column -->
+                <div class="col-item">
+                    <div class="col-item-text">
+                        <h1>Привет!</h1>
+                        
+                        <div>
+                            Меня зовут Света, и я дизайнер. Я исследую, проектирую и рисую.<br/>
+                            Со мной можно связаться, написав на почту <a href="mailto:zvuki.u@gmail.com">zvuki.u@gmail.com</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="yoga.html">
+                            <img class="col-item-image" src="img/designer_columns/logos-16.svg" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>Йога</h1>
+                                    <div>Серия иллюстраций</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                   <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="unicorn.html">
+                            <img class="col-item-image" src="img/designer_columns/logos-23.svg" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>Чайки и единороги</h1>
+                                    <div>Паттерны</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                   <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="dogs.html">
+                            <img class="col-item-image" src="img/designer_columns/logos-20.svg" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>Собаки и их друзья</h1>
+                                    <div>Серия иллюстраций</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="stickers.html">
+                            <img class="col-item-image" src="img/designer_columns/logos-22.svg" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>Велосипед и панда</h1>
+                                    <div>Стикеры</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <!-- col-1 end -->
+            </td>
+            <td>
+                
+                <!-- second column -->
+            <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="nyash.html">
+                            <img class="col-item-image" src="img/designer_columns/logos-21.svg" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>Хостел в Симферополе</h1>
+                                    <div>Баннеры</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="im.html">
+                            <img class="col-item-image" src="img/designer_columns/logos-19.svg" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>Школа интернет-маркетинга</h1>
+                                    <div>Баннеры</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="sport.html">
+                            <img class="col-item-image" src="img/designer_columns/logos-24.svg" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>Спортивный магазин</h1>
+                                    <div>Иконки</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="blacksea.html">
+                            <img class="col-item-image" src="img/designer_columns/logos-01.jpg" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>Кафе на побережье</h1>
+                                    <div>Айдентика</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <!-- col-2 end -->
+            </td>
+            <td>
+                <!-- third column -->
+                <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="shop.html">
+                            <img class="col-item-image" src="img/designer_columns/logos-banner-26.png" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>Интернет-магазины в социальных сетях</h1>
+                                    <div>Баннеры</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="hands.html">
+                            <img class="col-item-image" src="img/designer_columns/logos-15.jpg" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>Рисунки на бумаге от руки</h1>
+                                    <div></div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="birds.html">
+                            <img class="col-item-image" src="img/designer_columns/logos-02.svg" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>Птицы Финляндии</h1>
+                                    <div>Серия иллюстраций</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="run.html">
+                            <img class="col-item-image" src="img/designer_columns/logo-14.svg" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>Красочный забег</h1>
+                                    <div>Персонажи и баннеры</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="icons.html">
+                            <img class="col-item-image" src="img/designer_columns/logos-25.svg" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>Горы, море и любимые кеды</h1>
+                                    <div>Иконки и стикеры</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <!-- col-3 end -->
+            </td>
+            </tr>
+        </table>
+    </body>
 </html>
