--- a/salat.html
+++ b/salat.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="header">
-      <a href="designer.html">
+      <a href="index.html?designer">
         <img src="img/designer/name.png" class="header"/>
       </a>
     </div>
