--- a/stickers.html
+++ b/stickers.html
@@ -1,15 +1,19 @@
 <html>
   <head>
-    <title>Tulenina, Super Giggle</title>
+    <title>Велосипед и панда / Стикеры</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/designer.css">
     <meta charset="utf-8">
   </head>
 
+  <div class="rel-nav rel-nav-left"><a href="dog.html"><img src="img/designer/left.svg"></a></div>
+  <div class="rel-nav rel-nav-right"><a href="nyash.html"><img src="img/designer/right.svg"></a></div>
+
+
   <body>
 
     <div class="header">
-      <a href="designer.html">
+      <a href="index.html?designer">
         <img src="img/designer/name.png" class="header"/>
       </a>
     </div>
