--- a/yoga.html
+++ b/yoga.html
@@ -1,15 +1,17 @@
 <html>
   <head>
-    <title>Tulenina, Super Giggle</title>
+    <title>Йога / Серия иллюстраций</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/designer.css">
     <meta charset="utf-8">
   </head>
+    <div class="rel-nav rel-nav-left"><a href="icons.html"><img src="img/designer/left.svg"></a></div>
+    <div class="rel-nav rel-nav-right"><a href="unicorn.html"><img src="img/designer/right.svg"></a></div>
 
   <body>
 
     <div class="header">
-      <a href="designer.html">
+      <a href="index.html?designer">
         <img src="img/designer/name.png" class="header"/>
       </a>
     </div>
