remove header margin-top-35

--- a/avi.html
+++ b/avi.html
@@ -13,7 +13,7 @@
       </a>
     </div>
     
-    <h1 class="centered-block margin-top-35">Мобильные приложения «Авито&nbsp;—&nbsp;добрые&nbsp;дела»</br>и «Сбербанк&nbsp;онлайн»</h1>
+    <h1 class="centered-block main-inner-header-top-z2r4g">Мобильные приложения «Авито&nbsp;—&nbsp;добрые&nbsp;дела»</br>и «Сбербанк&nbsp;онлайн»</h1>
     <div class="centered-block heart">
       <img style="width:2%;"  src="img/designer/heart.png"/>
     </div>
