--- a/china.html
+++ b/china.html
@@ -13,7 +13,7 @@
       </a>
     </div>
 
-    <h1 class="centered-block margin-top-35">Мобильное приложение «Chi-chi-china»</h1>
+    <h1 class="centered-block main-inner-header-top-z2r4g">Мобильное приложение «Chi-chi-china»</h1>
     <div class="centered-block heart">
       <img style="width:2%;"  src="img/designer/heart.png"/>
     </div>
