--- a/icons.html
+++ b/icons.html
@@ -17,7 +17,7 @@
       </a>
     </div>
 
-    <h1 class="centered-block margin-top-35">Горы, море и любимые кеды</h1>
+    <h1 class="centered-block main-inner-header-top-z2r4g">Горы, море и любимые кеды</h1>
 
     <div class="centered-block heart">
       <img style="width:2%;"  src="img/designer/heart.png"/>
