--- a/birds.html
+++ b/birds.html
@@ -16,7 +16,7 @@
       </a>
     </div>
 
-    <h1 class="centered-block margin-top-35">Птицы Финляндии 
+    <h1 class="centered-block main-inner-header-top-z2r4g">Птицы Финляндии 
     </h1>
 
     <div class="centered-block heart">
