--- a/blacksea.html
+++ b/blacksea.html
@@ -16,7 +16,7 @@
       </a>
     </div>
 
-    <h1 class="centered-block margin-top-35">Синее, синее море</h1>
+    <h1 class="centered-block main-inner-header-top-z2r4g">Синее, синее море</h1>
 
         <div class="centered-block heart">
       <img style="width:2%;"  src="img/designer/heart.png"/>
