--- a/im.html
+++ b/im.html
@@ -16,7 +16,7 @@
       </a>
     </div>
     
-    <h1 class="centered-block margin-top-35">Снова в школу?</h1>
+    <h1 class="centered-block main-inner-header-top-z2r4g">Снова в школу?</h1>
 
     <div class="centered-block heart">
       <img style="width:2%;"  src="img/designer/heart.png"/>
