--- a/salat.html
+++ b/salat.html
@@ -12,7 +12,7 @@
       </a>
     </div>
     
-    <h1 class="centered-block margin-top-35">Мобильное приложение «Salat»</h1>
+    <h1 class="centered-block main-inner-header-top-z2r4g">Мобильное приложение «Salat»</h1>
     <div class="centered-block heart">
       <img style="width:2%;"  src="img/designer/heart.png"/>
     </div>
