--- a/skalka.html
+++ b/skalka.html
@@ -11,7 +11,7 @@
         <img src="img/designer/name.png" class="header"/>
       </a>
     </div>
-    <h1 class="centered-block margin-top-35">Мобильное приложение «Skalka»</h1>
+    <h1 class="centered-block main-inner-header-top-z2r4g">Мобильное приложение «Skalka»</h1>
     <div class="centered-block heart">
       <img style="width:2%;"  src="img/designer/heart.png"/>
     </div>
