--- a/sport.html
+++ b/sport.html
@@ -18,7 +18,7 @@
       </a>
     </div>
     
-    <h1 class="centered-block margin-top-35">А где консультант?</h1>
+    <h1 class="centered-block main-inner-header-top-z2r4g">А где консультант?</h1>
 
     <div class="centered-block heart">
       <img style="width:2%;"  src="img/designer/heart.png"/>
