--- a/unicorn.html
+++ b/unicorn.html
@@ -16,7 +16,7 @@
       </a>
     </div>
     
-    <h1 class="centered-block margin-top-35">Чайки и единороги</h1>
+    <h1 class="centered-block main-inner-header-top-z2r4g">Чайки и единороги</h1>
 
     <div class="centered-block heart">
       <img style="width:2%;"  src="img/designer/heart.png"/>
